--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,33 @@
+
 .wrapper {
   width: 500px;
   margin: 0 auto;
+  background-color: rgb(47, 47, 187);
+  color: white;
+  border-radius: 4px;
 }
 
+  
 .wrapper h1 button {
-  background-color: white;
-  border: none;
+  color: white;
+  background-color: rgb(241, 23, 23);
+  border-radius: 10px;
 }
+
+
 
 .products {
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
+  background-color: white;
 }
 
 .product {
   text-align: center;
   padding: 20px;
   border-radius: 10px;
-  background-color: #e5e5e5;
+  background-color: #33d8e4;
   margin: 10px;
   width: 145px;
   box-sizing: border-box;
@@ -35,7 +44,7 @@
 }
 
 .product button {
-  background-color: skyblue;
+  background-color: rgb(8, 230, 100);
   border: none;
   font-size: 12px;
   padding: 5px 10px;
@@ -46,3 +55,4 @@
   background: #e5e5e5;
   padding: 5px;
 }
+
